--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8083
 jwt.secret=m@tirB@nK
+
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=8KB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+file.upload-dir=upload/
