--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
+system.salt=S0m3S@1T
 jwt.secret=m@tirB@nK
+springdoc.swagger-ui.path=/swagger-ui.html
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
