--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ server.port=8080
 system.salt=S0m3S@1T
 jwt.secret=m@tirB@nK
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.mvc.static-path-pattern=uploads/**
+spring.resources.static-locations=file:uploads/
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=8KB
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-file.upload-dir=upload/
+file.upload-dir=uploads/
