--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.mvc.static-path-pattern=uploads/**
 spring.resources.static-locations=file:uploads/
 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+ 
+# Custom H2 Console URL
+spring.h2.console.path=/h2
+
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=8KB
