--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.mvc.static-path-pattern=uploads/**
 spring.resources.static-locations=file:uploads/
 
+spring.datasource.username=sa
+spring.datasource.password=123
+
 # Enabling H2 Console
 spring.h2.console.enabled=true
  
